# deepin-appstore

./: .clog.toml  .gitignore  .gitmodules  .gitreview  .release.json  AboutWindow.cpp  AboutWindow.h  Bridge.cpp  Bridge.h  CHANGELOG.md  CMakeLists.txt  ChangeLog.txt  DBusInterface.cpp  DBusInterface.h  FilterMouseMove.cpp  FilterMouseMove.h  LAStoreBridge.cpp  LAStoreBridge.h  MainWindow.cpp  MainWindow.h  ProgressButton.cpp  ProgressButton.h  README.md  Shell.cpp  Shell.h  StupidWindow.cpp  StupidWindow.h  TextBrowser.cpp  TextBrowser.h  ToolTip.cpp  ToolTip.h  WebWidget.h  common.h  configure.cpp  configure.h  dbusmenu.cpp  dbusmenu.h  dbusmenumanager.cpp  dbusmenumanager.h  lastore-daemon.h  (+3 more)
.tx/: config
src/: CMakeLists.txt
src/app/: base64_image.cpp  deepin-appstore.cpp  deepin_appstore.cpp  deepin_appstore_metadata.cpp  qurl_demo.cpp  test_image_viewer.cpp  test_launcher.cpp
src/base/: command.cpp  command.h  consts.cpp  consts.h  file_util.cpp  file_util.h  launcher.cpp  launcher.h
src/daemon/: app.go  deb.go  deb_job.go  deb_job_dbusutil.go  main.go  message.go  metadata.go  metadata_ifc.go  settings.go  settings_ifc.go  utils.go
src/daemon/data/: com.deepin.appstore.json
src/dbus/: CMakeLists.txt  app_store_daemon_dbus_interface.cpp  app_store_daemon_dbus_interface.h  app_store_dbus_adapter.cpp  app_store_dbus_adapter.h  app_store_dbus_interface.cpp  app_store_dbus_interface.h  app_store_dbus_proxy.cpp  app_store_dbus_proxy.h  app_store_metadata_dbus_adapter.cpp  app_store_metadata_dbus_adapter.h  app_store_metadata_dbus_proxy.cpp  app_store_metadata_dbus_proxy.h  com.deepin.AppStore.Backend.Deb.xml  com.deepin.AppStore.Backend.Job.xml  com.deepin.AppStore.Daemon.service  com.deepin.AppStore.Metadata.service  com.deepin.AppStore.Metadata.xml  com.deepin.AppStore.service  com.deepin.AppStore.xml  com.deepin.lastore.job.xml  com.deepin.lastore.manager.xml  com.deepin.lastore.updater.xml  com.deepin.lastore.xml  dbus_consts.cpp  dbus_consts.h  dbus_extended_abstract_interface.cpp  dbus_extended_abstract_interface.h  deepinid_interface.cpp  deepinid_interface.h  generate-iface.sh  lastore_deb_interface.cpp  lastore_deb_interface.h  lastore_job_interface.cpp  lastore_job_interface.h  lastore_manager_interface.cpp  lastore_manager_interface.h  lastore_updater_interface.cpp  lastore_updater_interface.h
src/dbus/dbus_variant/: app_metadata.cpp  app_metadata.h  app_version.cpp  app_version.h  installed_app_info.cpp  installed_app_info.h  installed_app_timestamp.cpp  installed_app_timestamp.h
src/dbus/dbusvariant/: app_metadata.cpp  app_metadata.h  app_update_info.cpp  app_update_info.h  app_version.cpp  app_version.h  installed_app_info.cpp  installed_app_info.h  locale_mirror_source.cpp  locale_mirror_source.h
src/misc/tools/: metadata_for_v4.go  sync_metadata.sh
src/resources/: CMakeLists.txt  deepin-appstore.desktop  images.cpp  images.h  settings.cpp  settings.h  settings.ini  settings.ini.default  theme.cpp  theme.h
src/resources/themes/: themes.qrc
src/services/: account_manager.cpp  account_manager.h  apt_util_worker.cpp  apt_util_worker.h  args_parser.cpp  args_parser.h  dbus_manager.cpp  dbus_manager.h  dpk_link_validation.cpp  dpk_link_validation.h  metadata_manager.cpp  metadata_manager.h  rcc_scheme_handler.cpp  rcc_scheme_handler.h  search_manager.cpp  search_manager.h  search_result.cpp  search_result.h  session_manager.cpp  session_manager.h  settings_manager.cpp  settings_manager.h  store_daemon_deb.cpp  store_daemon_deb.h  store_daemon_manager.cpp  store_daemon_manager.h  store_daemon_proxy.cpp  store_daemon_proxy.h  store_daemon_worker.cpp  store_daemon_worker.h
src/services/backend/: backend.qrc  chinese2pinyin.cpp  chinese2pinyin.h  metadata_cache_worker.cpp  metadata_cache_worker.h
src/services/package/: apt_package_manager.cpp  apt_package_manager.h  apt_util_worker.cpp  dpk_url.cpp  dpk_url.h  package_manager.cpp  package_manager.h  package_manager_interface.cpp  package_manager_interface.h
src/ui/: image_viewer_proxy.cpp  image_viewer_proxy.h  store_daemon_proxy.cpp  store_daemon_proxy.h  title_bar_proxy.cpp  title_bar_proxy.h  web_event_delegate.cpp  web_event_delegate.h  web_window.cpp  web_window.h
src/ui/channel/: account_proxy.cpp  account_proxy.h  channel_proxy.h  image_viewer_proxy.cpp  image_viewer_proxy.h  log_proxy.cpp  log_proxy.h  menu_proxy.cpp  menu_proxy.h  search_proxy.cpp  search_proxy.h  settings_proxy.cpp  settings_proxy.h  store_daemon_proxy.cpp  store_daemon_proxy.h  title_bar_proxy.cpp  title_bar_proxy.h
src/ui/utils/: theme_manager.cpp  theme_manager.h
src/web/: .angular-cli.json  .dockerignore  .gitignore  .prettierrc.yaml  .yarnclean  Makefile  README.md  angular.json  browserslist  fix-i18n.py  node_modules  package-lock.json  package.json  test-i18n.bash  tsconfig.json
src/web_dist/: 3rdpartylicenses.txt  index.html  inline.0d40137e743fc5fcfc67.bundle.js  inline.438fa24185ab168c008c.bundle.js  inline.469b6d19a3bd01b5066d.bundle.js  inline.4e9ce275bb2ded258dd9.bundle.js  inline.bundle.js.map  main.06f42c58c307cc61dfba.js  main.10a6f4bdc972d32390c5.bundle.js  main.11829b890107af5e8dd5.js  main.1731485a1595a9d9f542.js  main.20dd50b1a7683f59c98d.js  main.2425a3b79e685390f450.js  main.2afbb0febfc67b33fd60.js  main.42b37a9908352d065bca.bundle.js  main.472fca26cd225f2f48e1.js  main.557ec955d78d8161091c.js  main.5ee6fd2d6e58556cf592.js  main.7437af40a462162c05cf.bundle.js  main.7ee0a276c091adbe0b16.js  main.81fab7a9d4058c3386ec.js  main.8c1f2701433ec8ee39c6.js  main.8e186c03abf925a52d70.js  main.96d7d6eeb1dab4af867d.bundle.js  main.9942610c1dce1969be58.js  main.a4719a5fca0bc0cd1af5.js  main.a8aaff216215aba4ba50.bundle.js  main.b41348cbc23e19fabfd8.js  main.bundle.js  main.bundle.js.map  main.e983186ceeba5e8c49fa.js  main.f56086bf75fbce3cfa09.js  main.fb60b402fc442deca293.js  polyfills.bundle.js  polyfills.bundle.js.map  polyfills.f20484b2fa4642e0dca8.bundle.js  scripts.3ee4062c60f4a050d268.bundle.js  scripts.3ee4062c60f4a050d268.js  styles.034a0e25bede6b03fc8f.css  styles.0bf1762ec11078d3f74d.bundle.css  (+13 more)
(+759 files in other folders)
